--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -12,6 +12,7 @@ $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
 $mobile-width-only: 767px;
+$tablet-width-only: 1200px;
 
 /*переменная для ретинизации*/
 $retina-dppx: 1.5dppx;
