--- a/source/sass/blocks/likes.scss
+++ b/source/sass/blocks/likes.scss
@@ -1,3 +1,8 @@
 .likes__title {
   @include reset-text;
 }
+
+.likes__button {
+  background-image: url("../img/icon-like.svg");
+  background-repeat: no-repeat;
+}
