--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,6 +4,8 @@
 }
 
 .site-list__link {
+  padding-top: 21px;
+  padding-bottom: 20px;
   display: block;
 
   font-size: 18px;
@@ -11,11 +13,10 @@
   color: $white;
   text-transform: uppercase;
   text-decoration: none;
-
-  //box-shadow: 0 1px 0 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
+  box-shadow: 0px 1px 0 0 rgba(1, 1, 1, 0.2), inset 0px 1px 0 0 rgba(255, 255, 255, 0.2);
 }
 
-.site-list a[href] {
+.site-list__link {
   &:hover {
     background-color: #669ec0;
   }
@@ -49,6 +50,7 @@
 
     &:hover {
       color: #604e43;
+      background-color: transparent;
     }
 
     &:active {
@@ -64,6 +66,7 @@
 
     &:hover {
       color: $lightblue;
+      background-color: transparent;
     }
 
     &:active {
@@ -79,34 +82,5 @@
     flex-wrap: wrap;
 
     background-color: $white;
-  }
-
-  .site-list__link {
-    padding: 25px 0 23px;
-
-    background: none;
-    border: none;
-    color: $darkblack;
-
-    &:hover {
-      color: $lightblue;
-    }
-
-    &:active {
-      color: rgba(0, 0, 0, 0.3);
-    }
-  }
-
-  .site-list__link[href] {
-
-    color: #766357;
-
-    &:hover {
-      color: #604e43;
-    }
-
-    &:active {
-      color: rgba(118, 99, 87, 0.3);
-    }
   }
 }
