--- a/source/sass/global/main-nav.scss
+++ b/source/sass/global/main-nav.scss
@@ -18,7 +18,7 @@
   width: 70px;
   height: 50px;
 
-  background-color: $lightblue;
+  background-color: transparent;
 
   cursor: pointer;
   border: none;
