--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -231,12 +231,12 @@
 
     &--name-surname-patronymic {
       order: 2;
-      width: 34.63%;
+      width: 50%;
     }
 
     &--your-impressions {
       order: 1;
-      width: 35.54%;
+      width: 50%;
     }
 
     &--contact-information {
@@ -264,14 +264,13 @@
     font-weight: bold;
     font-style: normal;
     line-height: 26px;
-    text-align: left;
+    text-align: center;
     width: 163px;
     color: $darkblack;
 
     &--your-impressions {
       margin-bottom: 67px;
-      text-align: left;
-      width: 273px;
+      width: 100%;
     }
 
     &--contact-information {
