--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -19,8 +19,13 @@
 }
 
 .intro__image-wrapper {
-  width: 229px;
-  height: 39px;
+  width: 100%;
+  height: 389px;
+  margin: 0 auto;
+
+  background-color: $lightblue;
+  background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
 }
 
 .intro__text-wrapper {
@@ -50,7 +55,7 @@
   }
 
   .intro__image-wrapper {
-    width: 768px;
+    width: 100%;
     height: 346px;
   }
 
@@ -58,8 +63,9 @@
     padding-top: 76px;
     margin: 0 auto 75px;
   }
+
   &--form {
-    display:flex;
+    display: flex;
     width: 439px;
     margin: 0 auto;
   }
@@ -67,7 +73,7 @@
 
 @media (min-width: $desktop-width) {
   .intro__image-wrapper {
-    width: 1200px;
+    width: 100%;
     height: 357px;
   }
 
