--- a/source/sass/blocks/likes.scss
+++ b/source/sass/blocks/likes.scss
@@ -3,6 +3,12 @@
 }
 
 .likes__button {
+  width: 23px;
+  height: 21px;
+  background-color: transparent;
+  border: none;
   background-image: url("../img/icon-like.svg");
   background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
