--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,4 +1,5 @@
 .photo__image {
+  display: block;
   width: 100%;
   padding: 20px 22px;
   width: 280px;
@@ -42,8 +43,9 @@
 
 @media (min-width: $tablet-width) {
   .photo__image {
+
     &--sunset {
-      width: 648px;
+      width: 100%;
       height: 400px;
     }
 
