--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,7 +4,7 @@
 }
 
 .promo__wrapper {
-  width: 320px;
+  width: 100%;
   height: 389px;
   margin: 0 auto;
 
@@ -27,8 +27,7 @@
 
 .promo__text {
   padding-top: 43px;
-  margin: 0 auto;
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
   width: 255px;
   text-align: center;
   min-height: 149px;
@@ -56,7 +55,7 @@
 
 @media (min-width: $tablet-width) {
   .promo__wrapper {
-    width: 768px;
+    width: 100%;
     height: 518px;
     object-fit: contain;
 
@@ -73,8 +72,7 @@
   .promo__text {
     @include reset-text;
     width: 490px;
-    margin: 0 auto;
-    margin-bottom: 55px;
+    margin: 0 auto 55px;
   }
 
   .promo__title {
@@ -90,7 +88,7 @@
 
 @media (min-width: $desktop-width) {
   .promo__wrapper {
-    width: 1200px;
+    width: 100%;
     height: 518px;
     object-fit: contain;
 
