--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -23,15 +23,44 @@
   color: $lighterblack;
 }
 
-.video__wrapper {
-  width: 321px;
+.video__picture {
+  width: 100%;
   height: 201px;
 }
 
+.video__wrapper {
+  margin-bottom: 80px;
+}
+
 .video__interface {
-  width: 280px;
+  display: block;
+  margin: 0 auto;
+  padding: 22px 23px 23px 25px;
+  //width: 280px;
   height: 66px;
-  background-color: $white;
+  background-color: $white-greyish;
+  border: none;
+}
+
+.video__button {
+  border: none;
+  background-color: transparent;
+  fill: #5c6870;
+
+  &:hover {
+    fill:#333333;
+  }
+  &:active {
+    opacity: 0.3;
+  }
+
+  &--replay {
+    margin-right: 125px;
+
+    &--subtitles {
+      margin-right: 31px;
+    }
+  }
 }
 
 @media (min-width: $tablet-width) {
