--- a/source/sass/global/page-footer.scss
+++ b/source/sass/global/page-footer.scss
@@ -5,7 +5,6 @@
 }
 
 .page-footer__wrapper {
-  width: 320px;
   margin: 10px auto 0;
   padding-top: 30px;
   padding-bottom: 35px;
@@ -18,16 +17,13 @@
   @include reset-text;
   margin: 0 auto;
   width: 136px;
-  margin-bottom: 41px;
-  /* Временно для сетки */
   min-height: 16px;
 }
 
 .page-footer__social {
   display: flex;
   width: 140px;
-  margin: 0 auto 40px;
-  /* Временно для сетки */
+  margin: 41px auto 40px;
   min-height: 48px;
 }
 
@@ -36,22 +32,21 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 786px;
+    align-items: baseline;
     margin-top: 0;
     padding-top: 36px;
     padding-bottom: 36px;
-    /* Временно для сетки */
     min-height: 120px;
   }
 
   .page-footer__social {
     display: flex;
     flex-wrap: wrap;
-    width: 648px;
+    //width: 648px;
   }
 
   .page-footer__tag {
-    width: 150px;
+    //width: 136px;
   }
 
 }
